# iOSToAIJourney

./: README.md  myNotes.md
Week-01-Setup/: README.md  blog-posts.md
Week-01-Setup/Day-01-Tue-May-19/: 01-install-uv-and-python.md  02-project-skeleton.md  03-env-file-and-secrets.md  04-gemini-api-key-and-sdk.md  05-first-gemini-call.md  06-anthropic-sdk-and-key.md  07-end-of-day-checklist.md  README.md
Week-01-Setup/Day-01-Tue-May-19/code/: .env.example  check_env.py  hello_anthropic.py  hello_gemini.py  hello_gemini_streaming.py  pyproject.toml
Week-01-Setup/Day-02-Wed-May-20/: 01-why-blog-matters.md  02-hashnode-setup.md  03-blog-structure-for-engineers.md  04-kickoff-post-draft.md  05-end-of-day-checklist.md  README.md
Week-01-Setup/Day-03-Thu-May-21/: 01-github-portfolio-strategy.md  02-create-portfolio-repo.md  03-docker-fundamentals.md  04-install-docker-desktop.md  05-first-dockerfile.md  06-end-of-day-checklist.md  README.md
Week-01-Setup/Day-04-Fri-May-22/: 01-gcp-account-and-project.md  02-enable-apis.md  03-billing-alert.md  04-install-gcloud-cli.md  05-adc-explained.md  06-vertex-gemini-hello-world.md  07-end-of-day-checklist.md  README.md
Week-01-Setup/Day-05-Sat-May-23/: 01-xcode-and-ios-simulator.md  02-mlx-fundamentals.md  README.md  (+6 more)
Week-01-Setup/code/: .dockerignore  Dockerfile  pyproject.toml
Week-01-Setup/code/Day-01/: check_env.py  hello_gemini.py  self_anthropic_sdk.py  self_hello_gemini.py  self_hello_gemini_streaming.py
Week-01-Setup/code/ai-engineer-portfolio/: main.py  pyproject.toml
posts/: 00-kickoff.md
projects/: Readme.md
(+23 files in other folders)
