[project]
name = "ai-engineer-portfolio"
version = "0.1.0"
description = "Career switch portfolio: Doc-Talk, OSS-Docs RAG, Researcher Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.103.1",
    "google-genai>=2.5.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
# tiny edit
