[project]
name = "ai-engineer-portfolio"
version = "0.0.1"
description = "Career switch portfolio: Doc-Talk, OSS-Docs RAG, Researcher Agent"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=0.8.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
